[gd_scene load_steps=7 format=3 uid="uid://ca8xd7ra6en0h"]

[ext_resource type="Script" uid="uid://bkstioe7xue8q" path="res://scripts/chess.gd" id="1_iqcxx"]
[ext_resource type="Script" uid="uid://wfpt25m8phqm" path="res://scripts/user_interface/camera_pan.gd" id="2_7ohv5"]
[ext_resource type="Script" uid="uid://o4ohxqxvdj54" path="res://scripts/chess_logic.gd" id="2_urbgs"]
[ext_resource type="Script" uid="uid://b6wp1qbd66t5m" path="res://scripts/user_interface/turn_indicator.gd" id="3_8vtbg"]
[ext_resource type="Script" uid="uid://dwidaer5v3rcr" path="res://scripts/game_grid_container.gd" id="5_8vtbg"]
[ext_resource type="Script" uid="uid://cfd3waac0w4b1" path="res://scripts/user_interface/present_line.gd" id="6_urbgs"]

[node name="Chess" type="Node" node_paths=PackedStringArray("info_display", "mod_ui_container", "chess_logic")]
script = ExtResource("1_iqcxx")
info_display = NodePath("ChessUI/InfoDisplay")
mod_ui_container = NodePath("ChessUI/ModUIContainer")
chess_logic = NodePath("ChessLogic")

[node name="PresentLine" type="ColorRect" parent="." node_paths=PackedStringArray("chess_logic")]
offset_left = 12.0
offset_top = 50000.0
offset_right = 52.0
offset_bottom = 1050000.0
scale = Vector2(4.28261, -5.46906)
pivot_offset = Vector2(-30, 0)
mouse_filter = 2
color = Color(0.619608, 0.0823529, 0.411765, 0.811765)
script = ExtResource("6_urbgs")
chess_logic = NodePath("../ChessLogic")

[node name="ChessLogic" type="Node" parent="." node_paths=PackedStringArray("board_grid", "present")]
script = ExtResource("2_urbgs")
board_grid = NodePath("BoardGrid")
present = NodePath("../PresentLine")

[node name="BoardGrid" type="Container" parent="ChessLogic"]
offset_right = 500.0
offset_bottom = 500.0
script = ExtResource("5_8vtbg")
metadata/_custom_type_script = "uid://dwidaer5v3rcr"

[node name="CameraPan" type="Camera2D" parent="."]
position = Vector2(50.255, 74.38)
zoom = Vector2(0.615, 0.615)
script = ExtResource("2_7ohv5")

[node name="ChessUI" type="CanvasLayer" parent="."]

[node name="Submit" type="Button" parent="ChessUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = 47.0
offset_right = 154.0
offset_bottom = 99.0
grow_horizontal = 2
scale = Vector2(1.20228, 1.19062)
text = "Submit Move
"

[node name="Undo" type="Button" parent="ChessUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -310.0
offset_top = 42.0
offset_right = -116.0
offset_bottom = 96.0
grow_horizontal = 2
scale = Vector2(1.20228, 1.19062)
text = "Undo
"

[node name="Restart" type="Button" parent="ChessUI"]
offset_left = 19.0
offset_top = 140.0
offset_right = 213.0
offset_bottom = 194.0
scale = Vector2(1.20387, 1.19957)
text = "Restart"

[node name="TurnIndicator" type="RichTextLabel" parent="ChessUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -116.0
offset_right = 475.0
offset_bottom = -17.0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 72
text = "White Turn"
script = ExtResource("3_8vtbg")

[node name="InfoDisplay" type="RichTextLabel" parent="ChessUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -236.0
offset_right = 652.0
offset_bottom = -113.0
grow_vertical = 0
theme_override_colors/default_color = Color(0.10372748, 0.103118084, 0.10812221, 1)
theme_override_font_sizes/normal_font_size = 43

[node name="ModUIContainer" type="HFlowContainer" parent="ChessUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -949.0
offset_top = -261.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
reverse_fill = true

[node name="TextureButton" type="TextureButton" parent="ChessUI"]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="ChessUI/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="ChessUI/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="ChessUI/Restart" to="." method="_on_restart_pressed"]
